# mysotherm

./: .gitignore  README.md  api.md  mysa_messages.md  mysotherm.py  pyproject.toml
mysotherm/: __main__.py  auth.py  aws.py  liten_up.py  mysa_stuff.py
