[tool.poetry]
name = "mysotherm"
version = "0.1.0"
description = "Inspect and manipulate Mysa smart thermostats"
authors = [ "Daniel Lenski <dlenski@gmail.com>" ]
license = "GPLv3 or later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2"
pycognito = "^2024"
# unclear why, but poetry can't resolve pycognito unless this (transitive) dependence is listed explicitly
boto3 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
